@@ -36,7 +36,7 @@ class EditCLI extends Maintenance {
 	}
 
 	public function execute() {
-		global $wgUser, $wgArticle;
+		global $wgUser, $wgTitle;
 
 		$userName = $this->getOption( 'u', 'Maintenance script' );
 		$summary = $this->getOption( 's', '' );
@@ -53,19 +53,19 @@ class EditCLI extends Maintenance {
 			$wgUser->addToDatabase();
 		}
 
-		$title = Title::newFromText( $this->getArg() );
-		if ( !$title ) {
+		$wgTitle = Title::newFromText( $this->getArg() );
+		if ( !$wgTitle ) {
 			$this->error( "Invalid title", true );
 		}
 
-		$wgArticle = new Article( $title );
+		$article = new Article( $wgTitle );
 
 		# Read the text
 		$text = $this->getStdin( Maintenance::STDIN_ALL );
 
 		# Do the edit
 		$this->output( "Saving... " );
-		$status = $wgArticle->doEdit( $text, $summary,
+		$status = $article->doEdit( $text, $summary,
 			( $minor ? EDIT_MINOR : 0 ) |
 			( $bot ? EDIT_FORCE_BOT : 0 ) |
 			( $autoSummary ? EDIT_AUTOSUMMARY : 0 ) |
