@@ -495,6 +495,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * BREAKING CHANGE: Session keys returned by ApiUpload are now strings instead of integers 
 * (bug 24650) Fix API to work with categorylinks changes
 * action=parse now correctly returns an error for nonexistent pages
+* (bug 27201) Special:WhatLinksHere output no longer contains duplicate IDs
 
 * (bug 22738) Allow filtering by action type on query=logevent.
 * (bug 22764) uselang parameter for action=parse.
